--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,10 @@
 <script src="{{site.baseurl}}/assets/js/init.js"></script>
 </body>
 <footer class="page-footer">
-  <div class="footer-copyright" style="padding-left: 30px">
-    <i class="material-icons" style="padding-right:5px">copyright</i><p>2018 Copyright {{ site.name }} | All rights reserved</p>
-  </div>
+    <div class="footer-copyright" style="padding-left: 30px">
+        <i class="material-icons" style="padding-right:5px">copyright</i>
+        <p>2018 Copyright {{ site.name }}</p>
+    </div>
 </footer>
+
 </html>
