--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
             <div class="container">
-                <br><br>
+                <br><br><br>
                 <h1 class="header center teal-text text-lighten-2">{{ site.title }}</h1>
                 <div class="row center">
-                    <h5 class="header col s12 light"><br />{{ site.description }}</h5>
+                    <h5 class="header col s12 light"><br>{{ site.description }}</h5>
                 </div>
                 <br><br>
 
@@ -22,13 +22,7 @@
     {% include cookies.html %}
 </div>
 
-<div class="container" style="padding:20px;">
-    <div id="skills" class="section scrollspy">
-        <h3 style="text-align:center;">Tools and Experience</h3>
-        {% include skills.html %}
-    </div>
 
-</div>
 
 <div class="container" style="padding:20px;">
     <div id="portfolio" class="section scrollspy">
@@ -37,7 +31,13 @@
     </div>
 </div>
 
+<div class="container" style="padding:20px;">
+    <div id="skills" class="section scrollspy">
+        <h3 style="text-align:center;">Spells and Exp</h3>
+        {% include skills.html %}
+    </div>
 
+</div>
 
 
 <div class="parallax-container valign-wrapper">
