--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -7,7 +7,7 @@
     @extend %vertical-rhythm;
 
     .highlighter-rouge & {
-        background: #eef;
+        background: #74b9ff;
     }
 
     .c {
