--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
             <div class="container">
-                <br><br><br><br>
-                <h1 class="header center teal-text text-lighten-2">{{ site.title }}</h1>
+                <br><br><br><br><br><br>
+                <h1 class="header center teal-text text-lighten-2"><b>{{ site.title }}</b></h1>
                 <div class="row center">
-                    <h5 class="header col s12 light"><br>{{ site.description }}</h5>
+                    <h5 class="header col s12 light"><br><b>{{ site.description }}<b></h5>
                 </div>
                 <br><br>
 
@@ -33,7 +33,7 @@
 
 <div class="container" style="padding:20px;">
     <div id="skills" class="section scrollspy">
-        <h3 style="text-align:center;">Spells and Exp</h3>
+        <h3 style="text-align:center;">Spells and EXP</h3>
         {% include skills.html %}
     </div>
 
