--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
                 <br><br><br><br><br><br>
                 <h1 class="header center teal-text text-lighten-2"><b>{{ site.title }}</b></h1>
                 <div class="row center">
-                    <h5 class="header col s12 light"><br><b>{{ site.description }}</b></h5>
+                    <h5 class="header col s12 light"><br>{{ site.description }}</h5>
                 </div>
                 <br><br>
 
