--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,8 @@
                 <span class="card-title"><a style="color:white" href=""></a></span>
             </div>
             <div class="card-content">
-                <p>I am good at using unity</p>
+                <p>Studying at Woodbury University.</p>
+                <br><br><br><br><br><br><br><br><br>
             </div>
         </div>
     </div>
