--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,12 @@
     {% include cookies.html %}
 </div>
 
-
+<div class="container" style="padding:20px;">
+    <div id="skills" class="section scrollspy">
+        <h3 style="text-align:center;">About</h3>
+        {% include about.html %}
+    </div>
+</div>
 
 <div class="container" style="padding:20px;">
     <div id="portfolio" class="section scrollspy">
@@ -36,7 +41,6 @@
         <h3 style="text-align:center;">Spells and EXP</h3>
         {% include skills.html %}
     </div>
-
 </div>
 
 
