--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,8 @@
                 <div class="row center">
                     <h5 class="header col s12 light"><br>{{ site.description }}</h5>
                 </div>
-                <a class="waves-effect waves-light btn grey darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
                 <br><br>
-
+                <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
             </div>
         </div>
         <div class="parallax"><img src="{{site.parallax_image_one}}" alt="Unsplashed background img 1"></div>
