--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,10 +7,12 @@
                 <br><br><br><br><br><br>
                 <h1 class="header center teal-text text-lighten-2"><b>{{ site.title }}</b></h1>
                 <div class="row center">
-                    <h5 class="header col s12 light"><br>{{ site.description }}</h5>
+                    <br>
+                    <h5 class="header col s12 light">{{ site.description }}</h5>
+                    <br><br>
+                    <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
                 </div>
                 <br><br>
-                <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
             </div>
         </div>
         <div class="parallax"><img src="{{site.parallax_image_one}}" alt="Unsplashed background img 1"></div>
