--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,10 @@
             </div>
         </div>
         <div class="parallax"><img src="{{site.parallax_image_one}}" alt="Unsplashed background img 1"></div>
-        <br><br>
-        <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
+        <br><br><br><br>
+        <div class="row" style="text-align:center">
+            <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
+        </div>
     </div>
 </div>
 
