--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
         </div>
         <div class="parallax"><img src="{{site.parallax_image_one}}" alt="Unsplashed background img 1"></div>
     </div>
-    <div class="row" style="text-align:center">
+    <div class="row" style="text-align:right">
         <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="{{site.github}}"><i class="material-icons right">code</i>Github</a>
     </div>
 </div>
