--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="container" style="padding:20px;">
-    <div id="skills" class="section scrollspy">
+    <div id="about" class="section scrollspy">
         <h3 style="text-align:center;">About</h3>
         {% include about.html %}
     </div>
