--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,10 +5,9 @@
                 <span class="card-title"><a style="color:white" href=""></a></span>
             </div>
             <div class="card-content">
-                <p font-size:30px>Hi, my name is Cheng Gu. I am a sophomore at Woodbury University, majoring Applied Computer Science. Anticipates graduating in 2020 with a Bachelor’s Degree in Applied Computer Science.</p>
+                <p style="font-size:25px">Hi, my name is Cheng Gu. I am a sophomore at Woodbury University, majoring Applied Computer Science. Anticipates graduating in 2020 with a Bachelor’s Degree in Applied Computer Science.</p>
                 <br>
-                <p font-size:30px>I didn't start programming very early, but I love 3D game programming, and having a strong passion of learning Computer Graphics!</p>
-                <br><br><br><br><br><br><br><br><br>
+                <p style="font-size:25px">I didn't start programming very early, but I love 3D game programming, and having a strong passion of learning Computer Graphics!</p>
             </div>
         </div>
     </div>
