--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,7 +5,7 @@
                 <span class="card-title"><a style="color:white" href=""></a></span>
             </div>
             <div class="card-content">
-                <ul style="list-style-type:disc">
+                <ul style="font-size:20px">
                     <li>Good knowledge of Unity Game Engine, such as UGUI, Mecanim Animation, Particle System, and Unity API. </li>
                     <li>Be skilled in C# programming in Unity; Good knowledge in object-oriented programming.</li>
                     <li>Have a variety of programming experience, such as C++ with Unreal Game Engine; Python with Blender; Javascript with P5.js, Node.js, and Amazon Web Server; HTC Vive Virtual Reality with Unity Game Engine; TouchDesigner</li>
