--- a/_includes/nav-burger.html
+++ b/_includes/nav-burger.html
@@ -4,8 +4,9 @@
   </a>
     <ul>
         <li><a class="btn-floating blue darken-2 waves-effect waves-default" href="#home"><i class="material-icons">arrow_upward</i></a></li>
-        <li><a class="btn-floating green darken-2 waves-effect waves-default" href="#portfolio"><i class="material-icons">code</i></a></li>
         <li><a class="btn-floating grey darken-2 waves-effect waves-default" href="#about"><i class="material-icons">details</i></a></li>
+        <li><a class="btn-floating green darken-2 waves-effect waves-default" href="#portfolio"><i class="material-icons">code</i></a></li>
+        <li><a class="btn-floating grey darken-2 waves-effect waves-default" href="#skill"><i class="material-icons">subject</i></a></li>
         <li><a class="btn-floating yellow darken-3 waves-effect waves-default" href="#blog"><i class="material-icons">library_books</i></a></li>
         <li><a class="btn-floating red darken-1 waves-effect waves-default" href="#contact"><i class="material-icons">person</i></a></li>
     </ul>
