--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
             <div class="card-content">
                 <p style="font-size:25px">&nbsp;&nbsp;&nbsp;&nbsp; Hi, my name is Cheng Gu. I am a sophomore at Woodbury University, majoring Applied Computer Science. Anticipates graduating in 2020 with a Bachelor’s Degree in Applied Computer Science.</p>
                 <br>
-                <p style="font-size:25px">&nbsp;&nbsp;&nbsp;&nbsp; I didn't start programming very early, but I love 3D game programming, and having a strong passion of learning Computer Graphics!</p>
+                <p style="font-size:25px">&nbsp;&nbsp;&nbsp;&nbsp; I didn't start programming very early, but I love 3D game programming, and have a strong passion of learning Computer Graphics!</p>
             </div>
         </div>
     </div>
