--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -2,7 +2,9 @@
     <div class="col s12 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/Empty.jpg">
+                <img class="activator" src="../assets/images/project_1.jpg">
+                <br><br>
+                <a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://gucheng0712.github.io/A-Tragedy-of-Little-Chicks-P5.js-/">Play it here!</a>
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">{{site.project_one}}<i class="material-icons right">more_vert</i></span>
