--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
                 <ul style="font-size:18px;">
                     <li style="color:cornflowerblue">"Good knowledge of Unity Game Engine, such as UGUI, Mecanim Animation, Particle System, and Unity API. " </li><br>
                     <li style="color:darkorange">"Be skilled in C# programming in Unity; Good knowledge in object-oriented programming. "</li><br>
-                    <li style="color:blueviolet">"Have a variety of programming experience, such as C++ with Unreal Game Engine; Python with Blender; Javascript with P5.js, Node.js, and Amazon Web Server; HTC Vive Virtual Reality with Unity Game Engine; TouchDesigner. "</li><br>
+                    <li style="color:blueviolet">"Have a variety of programming experience, such as C++ with Unreal Game Engine; Python with Blender; Javascript with P5.js, Node.js, and Amazon Web Service; HTC Vive Virtual Reality with Unity Game Engine; TouchDesigner. "</li><br>
                     <li style="color:darkred">"Be familiar with using 3D creation suite, such as Blender and Maya. "</li><br>
                     <li style="color:deeppink">"Have a solid mathematical foundation. Currently working as a Math Tutor at Woodbury University. "</li><br>
                     <li style="color: darkgreen">"Strong sense of responsibility and enthusiasm for learning. "</li><br>
