--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -19,7 +19,7 @@
     <div class="col s12 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/Empty.jpg">
+                <img class="activator" src="../assets/images/P2.jpg">
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">more_vert</i></span>
