--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
     <div class="col s12">
         <div class="card">
             <div class="card-image">
-                <span class="card-title"><a style="color:grey" href=""></a></span>
+                <span class="card-title"><a style="color:#74b9ff" href=""></a></span>
             </div>
             <div class="card-content">
                 <p style="font-size:25px">&nbsp;&nbsp;&nbsp;&nbsp; Hi, my name is Cheng Gu. I am a sophomore at Woodbury University, majoring Applied Computer Science. Anticipates graduating in 2020 with a Bachelor’s Degree in Applied Computer Science.</p>
