--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -23,7 +23,7 @@
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_one_url}}">{{site.project_button}}</a></p>
+                <p><a href="{{site.project_two_url}}">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
@@ -55,7 +55,7 @@
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_three_url}}">{{site.project_button}}</a></p>
+                <p><a href="{{site.project_four_url}}">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
