--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -28,6 +28,8 @@
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                 <p>{{site.project_two_description}}</p>
+                <br><br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://gucheng0712.github.io/2018/05/12/TECH-1711-FinalReview/">Read more!</a></p>
             </div>
         </div>
     </div>
