--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -47,6 +47,7 @@
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                 <p>{{site.project_three_description}}</p>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://youtu.be/cVsh4RjPJGY">Watch video here!</a></p>
             </div>
         </div>
     </div>
