--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -1,69 +1,145 @@
 <div class="row">
-    <div class="col s12 m6">
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="../assets/images/P1.jpg">
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">{{site.project_one}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_one_url}}">{{site.project_button}}</a></p>
+                <span class="card-title activator grey-text text-darken-4">A Tragedy of Little Chicks -using P5.js<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/A-Tragedy-of-Little-Chicks-P5.js-">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>{{site.project_one_description}}</p>
+                <p>A Game inspired by Snake vs Block. The Chicken Mother wants to save her children and fight with bad animals.</p>
                 <br>
                 <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://gucheng0712.github.io/A-Tragedy-of-Little-Chicks-P5.js-/">Play it here!</a></p>
             </div>
         </div>
     </div>
-    <div class="col s12 m6">
+
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P2.jpg">
+                <img class="activator" src="../assets/images/P2.png" >
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">{{site.project_two}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_two_url}}">{{site.project_button}}</a></p>
+                <span class="card-title activator grey-text text-darken-4">Suzuka Wants to Fly (Compatible with VR) -using Unity3D<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/Suzuka-wants-to-fly">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>{{site.project_two_description}}</p>
+                <p>In this Project, I focus on creating a third person controller system for my first anime character, with Swinging, Fly-Bursiting, wallwalking, and battle machanics. I also create a infinity City Generator to help me create a world easily.</p>
                 <br>
-                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://gucheng0712.github.io/2018/05/12/TECH-1711-FinalReview/">Read more!</a></p>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37162427">Watch Video Here!</a></p>
             </div>
         </div>
     </div>
 </div>
+
+
 <div class="row">
-    <div class="col s12 m6">
+	<div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P3.jpg" style="height:366px;">
+                <img class="activator" src="../assets/images/P3.png" >
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">{{site.project_three}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_three_url}}">{{site.project_button}}</a></p>
+                <span class="card-title activator grey-text text-darken-4">Beyond Atlantis -using TouchDesigner & Arduino<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/Beyond-Atlantis">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>{{site.project_three_description}}</p>
-                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://youtu.be/cVsh4RjPJGY">Watch video here!</a></p>
+                <p>Using the versatility of projection mapping and the depth of infinity mirrors to show a piece that would inspire curiosity about the wonders, beauty, and unknowns that lie deep beneath the surface of what the human eye can perceive; the deep sea.</p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37162148">Watch video here!</a></p>
             </div>
         </div>
     </div>
-    <div class="col s12 m6">
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/Empty.jpg" style="height:366px;">
+                <img class="activator" src="../assets/images/P7.png" >
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">{{site.project_four}}<i class="material-icons right">more_vert</i></span>
-                <p><a href="{{site.project_four_url}}">{{site.project_button}}</a></p>
+                <span class="card-title activator grey-text text-darken-4">Rhythm Game RPG - using Unity<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/Suzuka-Island">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>{{site.project_four_description}}</p>
+                <p>A Story Based Rhythm Game Made with Game design and art students, First time Collaboration</p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37156808">Watch Video Here!</a></p>
             </div>
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P5.png">
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">Character Modeling and Rigging - using Blender</span>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>An anime daughter by myself in my spare time, I love Anime</p>
+            </div>
+        </div>
+    </div>
+    <div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P6.png" >
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">3D Props Modelling - using Maya</span>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>A Animated Led Sign Built for my Major, be able to send msg to Adafruit and change the Led Animation and the Motor movement state </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+	<div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P4.png" >
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">Animated Led Sign - using Arduino & P5.js<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/Animated-LED-Sign">{{site.project_button}}</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>A Animated Led Sign Built for my Major, be able to send msg to Adafruit and change the Led Animation and the Motor movement state </p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://github.com/gucheng0712/Animated-LED-Sign">link here!</a></p>
+            </div>
+        </div>
+    </div>
+    
+	<div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P8.png" >
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">Cartoon Island Level Design - using Unity & Premiere<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/RhythmRPG">{{site.project_button}}</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>A Level Design Project for creating a beautiful cartoon environment</p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37152972">Watch Video Here!</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+
