--- a/_includes/blog-feed.html
+++ b/_includes/blog-feed.html
@@ -1,19 +1,36 @@
-<div class="row">
-    {% for post in site.posts %}
-
-    <div class="col s12 m6">
-        <div class="card">
-            <div class="card-image">
-                <img src="{{post.image}}">
-                <span class="card-title"><a style="color:white">{{ post.title | escape }}</a></span>
-                <a id="{{post.url}}" class="btn-floating halfway-fab waves-effect waves-light red" href="{{ post.url | relative_url }}"><i class="material-icons">more_horiz</i></a>
-            </div><br/><br/>
-            <!--
-<div class="card-content">
-    <p>{{post.excerpt}}</p>
-</div>
--->
+<div id="blogs">
+    <div class="row">
+        {% for post in site.posts %}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-image">
+                    <img src="{{post.image}}">
+                    <span class="card-title"><a style="color:white">{{ post.title | escape }}</a></span>
+                    <a id="{{post.url}}" class="btn-floating halfway-fab waves-effect waves-light red" href="{{ post.url | relative_url }}"><i class="material-icons">more_horiz</i></a>
+                </div><br/><br/>
+            </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
+
+<div align="center">
+    <a onclick="showBlog()" class="btn-floating waves-effect waves-light red pulse"><i class="large material-icons" id="icon"></i></a>
+</div>
+
+
+<script>
+    showBlog();
+
+    function showBlog() {
+        var x = document.getElementById("blogs");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+            document.getElementById("icon").innerHTML = "arrow_drop_up";
+        } else {
+            x.style.display = "none";
+            document.getElementById("icon").innerHTML = "arrow_drop_down";
+        }
+    }
+
+</script>
