--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -20,7 +20,7 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P2.png">
+                <img class="activator" src="../assets/images/P2.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Suzuka Wants to Fly (Compatible with VR) -using Unity3D<i class="material-icons right">more_vert</i></span>
@@ -38,10 +38,10 @@
 
 
 <div class="row">
-    <div class="col s20 m6">
+	<div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P3.png">
+                <img class="activator" src="../assets/images/P3.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Beyond Atlantis -using TouchDesigner & Arduino<i class="material-icons right">more_vert</i></span>
@@ -58,7 +58,7 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P7.png">
+                <img class="activator" src="../assets/images/P7.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Rhythm Game RPG - using Unity<i class="material-icons right">more_vert</i></span>
@@ -92,24 +92,24 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P6.png">
+                <img class="activator" src="../assets/images/P6.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">3D Props Modelling - using Maya</span>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>Props Modeling for Modeling class </p>
+                <p>Some prop modeling projects for the 3D Modeling Class</p>
             </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s20 m6">
+	<div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P4.png">
+                <img class="activator" src="../assets/images/P4.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Animated Led Sign - using Arduino & P5.js<i class="material-icons right">more_vert</i></span>
@@ -123,11 +123,11 @@
             </div>
         </div>
     </div>
-
-    <div class="col s20 m6">
+    
+	<div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P8.png">
+                <img class="activator" src="../assets/images/P8.png" >
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Cartoon Island Level Design - using Unity & Premiere<i class="material-icons right">more_vert</i></span>
@@ -142,3 +142,4 @@
         </div>
     </div>
 </div>
+
