--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -8,7 +8,7 @@
 </div>
 
 <div style="position: fixed; right: 16px; bottom: 20px; z-index: 9999;">
-    <img src="{{ "/static/assets/img/search/cb-search.png" | prepend : site.baseurl }}"  id="search-btn"  title="Double click Ctrl"/>
+    <img src="{{ "/static/assets/img/search/search.gif" | prepend : site.baseurl }}"  id="search-btn"  title="Double click Ctrl"/>
 </div>
 
 <div class="navbar-wrapper">
