--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,9 @@ layout: default
                             {{ page.title }}
                         </h1>
                     </div>
-                    	{{ content }}
+                    <div class="ibox-postpadding">
+                        {{ content }}
+                    </div>
                     <hr>
                     <div class="row">
                         <div class="col-md-6">
