--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -27,10 +27,10 @@
                         {% if project.repo %}
                             <!-- <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/stargazers" class="btn btn-white btn-xs star"><i class="fa fa-star"></i> ...</a>&emsp;&emsp;
                             <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/network" class="btn btn-white btn-xs fork"><i class="fa fa-github"></i></a> -->
-                            &emsp;<a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" class="btn btn-white btn-xs"><i class="fa fa-github"></i></a>&emsp;
+                            &emsp;<a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" class="btn btn-white btn-xs"><i class="fa fa-github"></i> GitHub</a>&emsp;
                         {% endif %}
                         {% if project.demo_url %}
-                            &emsp;<a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"></i></a>&emsp;
+                            &emsp;<a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"> </i> Play</a>&emsp;
                         {% endif %}
                             <div style="height: 10px;"></div>
                         </div>
