--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -30,7 +30,7 @@
                             &emsp;<a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" class="btn btn-white btn-xs"><i class="fa fa-github"></i> GitHub</a>&emsp;
                         {% endif %}
                         {% if project.demo_url %}
-                            &emsp;<a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"> </i> Play</a>&emsp;
+                            &emsp;<a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"> </i> Demo</a>&emsp;
                         {% endif %}
                             <div style="height: 10px;"></div>
                         </div>
